Fix a whitespace issue in aggregation table in print version
In a cell with data of type wiki, the first (resp. the last) element
could have a non-zero top-margin (resp. bottom-margin) and this creates
unpleasant whitespaces.

This fixes #661 in print stylesheet.

--- a/print.less
+++ b/print.less
@@ -20,3 +20,17 @@
 .dokuwiki .struct_entry_form {
   display: none;
 }
+
+.dokuwiki .structaggregation {
+  &.structaggregationtable, &.structaggregationeditortable {
+    table.inline td {
+      & > *:last-child {
+        margin-bottom: 0;
+      }
+      & > *:first-child {
+        margin-top: 0;
+      }
+    }
+  }
+}
+
